fix: Update application.yml to resolve connection issues and improve database initialization settings